FIX: tablet spacing issues

--- a/components/coe/coeService/style.module.scss
+++ b/components/coe/coeService/style.module.scss
@@ -5,11 +5,12 @@
   padding: spacing(section-primary-padding);
   margin-top: 8.75rem;
 
-  @include mobile-tablet-p {
-    padding:3.75rem 1.5rem;
+  @include tablet {
+    padding:3.75rem spacing(tablet-padding);
   }
 
   @include mobile{
+    padding:3.75rem spacing(mobile-padding);
     margin-top: 3.75rem;
   }
 
